--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
             </div>
         </div>
     </section> -->
-    
+
 
     <!-- TagHelpers UI Section -->
     <section id="taghelpers" class="py-20 bg-white dark:bg-gray-900">
@@ -2061,7 +2061,7 @@
     </section>
 
     <!-- Noundry.ts / Noundry.org Section -->
-    <section id="noundry-ts" class="py-24 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-gray-900 dark:to-gray-800">
+    <!--<section id="noundry-ts" class="py-24 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-gray-900 dark:to-gray-800" >
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <div class="inline-block mb-4 px-4 py-1 bg-blue-100 dark:bg-blue-900/30 rounded-full">
@@ -2163,9 +2163,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <!-- Hybrid Architecture -->
+             <!--
             <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
                 <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-4 text-center">Best of Both Worlds: Hybrid Architecture</h3>
                 <p class="text-center text-gray-600 dark:text-gray-300 mb-8 max-w-3xl mx-auto">
@@ -2202,7 +2203,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- noun.js Client UI Framework Section -->
     <section id="noun-js" class="py-24 bg-gradient-to-br from-amber-50 to-orange-50 dark:from-gray-900 dark:to-gray-800">
