--- a/index.html
+++ b/index.html
@@ -2322,7 +2322,7 @@
             </div>
 
             <!-- Comparison: Noundry.ts vs noun.js -->
-            <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
+          <!--  <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
                 <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-4 text-center">Choose Your Approach</h3>
                 <p class="text-center text-gray-600 dark:text-gray-300 mb-8 max-w-3xl mx-auto">
                     Both frameworks share the same standards-first philosophy. Choose based on your project needs.
@@ -2396,6 +2396,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Pricing Section - HIDDEN: Coming Soon -->
     <section id="pricing" class="hidden py-20 bg-gray-50 dark:bg-gray-800">
